# lcd1602-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/teensy40/: Cargo.toml  README.md  build-upload.sh
examples/teensy40/src/: main.rs
src/: error.rs  lcd1602.rs  lib.rs  liquid_crystal.rs  logging.rs  main.rs
