[package]
name = "teensy40-lcd1602-example"
version = "0.1.0"
authors = ["Levi Lovelock <lovelock.levi@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
imxrt-hal = "0.4.4"
teensy4-panic = "0.2.0"
lcd1602-rs = {path =  "../.." }


[dependencies.teensy4-bsp]
version = "0.2"
features = ["rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
